[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
chrono = "0.4.23"
regex = "1"
itertools = "0.12.0"
num = "0.4"
array2d = "0.3.0"

[profile.release]
overflow-checks = true